--- a/example.html
+++ b/example.html
@@ -19,7 +19,7 @@
         ` from biz_activity`
         <where>
             <include refid="a"></include>
-            <include refid="file://../rbatis/example/example.html?refid=a"></include>
+            <include refid="file://../example/example.html?refid=a"></include>
             <if test="name != ''">
                 ` and name like #{name}`
             </if>
